# gsrs-rag-gateway

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements-examples.txt  requirements.txt
.github/workflows/: lint.yml  tests.yml
app/: __init__.py  config.py  main.py
app/db/: __init__.py  base.py  factory.py
app/db/backends/: __init__.py  chroma.py  pgvector.py
app/models/: __init__.py  api.py  db.py
app/services/: __init__.py  chunking.py  embedding.py  vector_database.py
docs/: README.md  api-reference.md  authentication.md  configuration.md  data-loading.md  quickstart.md  troubleshooting.md  vector-databases.md
docs/guides/: chatgpt.md  chunking.md  ollama-open-webui.md
examples/: gsrs_function.py  gsrs_tool.py
scripts/: load_data.py
tests/: __init__.py  test_chunking.py  test_embedding_service.py  test_load_data.py  test_vector_db.py
