[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsrs-rag-gateway"
version = "0.1.0"
description = "RAG (Retrieval-Augmented Generation) Gateway for GSRS (Global Substance Registration System) substances"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Egor Puzanov", email = "epuzanov@users.noreply.github.com"}
]
keywords = [
    "gsrs",
    "rag",
    "vector-database",
    "embeddings",
    "pgvector",
    "chromadb",
    "substances",
    "chemistry",
    "pharma",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Medical Science",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "numpy>=1.26.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dateutil>=2.8.2",
    "gsrs-model @ git+https://github.com/epuzanov/gsrs.model.git",
    "chromadb>=0.4.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
examples = [
    "openai>=1.0.0",
    "requests>=2.31.0",
]
ollama = [
    "ollama>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/epuzanov/gsrs-rag-gateway"
Documentation = "https://github.com/epuzanov/gsrs-rag-gateway/tree/main/docs"
Repository = "https://github.com/epuzanov/gsrs-rag-gateway"
Issues = "https://github.com/epuzanov/gsrs-rag-gateway/issues"

[project.scripts]
gsrs-gateway = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["annotation-unchecked"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
