[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsrs-rag-gateway"
version = "0.1.0"
description = "RAG (Retrieval-Augmented Generation) Gateway for GSRS (Global Substance Registration System) substances"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Egor Puzanov", email = "epuzanov@users.noreply.github.com"}
]
keywords = [
    "gsrs",
    "rag",
    "vector-database",
    "embeddings",
    "pgvector",
    "chromadb",
    "substances",
    "chemistry",
    "pharma",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Medical Science",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.4.2",
    "numpy>=2.4.4",
    "httpx>=0.28.1",
    "python-multipart>=0.0.24",
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dateutil>=2.9.0.post0",
    "gsrs-services-ai @ git+https://github.com/epuzanov/gsrs.services.ai.git@73a98a4b5f904d5c3397873a96c00fcd73b9e4fe",
    "gsrs-model @ git+https://github.com/epuzanov/gsrs.model.git@946cc43af72bee6608e0ea0bc57d386c2d0bb44a",
    "chromadb>=1.5.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
    "mypy>=1.20.0",
]
examples = [
    "openai>=2.30.0",
    "requests>=2.33.1",
]
ollama = [
    "ollama>=0.6.1",
]

[project.urls]
Homepage = "https://github.com/epuzanov/gsrs-rag-gateway"
Documentation = "https://github.com/epuzanov/gsrs-rag-gateway/tree/main/docs"
Repository = "https://github.com/epuzanov/gsrs-rag-gateway"
Issues = "https://github.com/epuzanov/gsrs-rag-gateway/issues"

[project.scripts]
gsrs-gateway = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["annotation-unchecked"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
